[package]
name = "dumpsys-rs"
version = "0.2.0"
edition = "2024"
authors = ["shadow3", "チセ <123655015+chise0713@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/shadow3aaa/dumpsys-rs"
description = "`dumpsys-rs` is a Rust library for retrieving and dumping service information in an Android system. It provides a convenient way to fetch detailed status information from different system services, similar to the `dumpsys` command in the Android shell."
license = "GPL-3.0"

[[example]]
name = "recents"

[dependencies]
thiserror = "^1"
twox-hash = { version = "^2", default-features = false, features = [
    "std",
    "xxhash3_64",
] }
rsbinder = { version = "^0.5", features = ["android_11_plus"] }
